# swe-bench-runner

./: .env.e2e.example  .env.integration.template  .gitignore  .pre-commit-config.yaml  API_KEYS_CONFIGURED.md  API_KEY_MANAGEMENT_PLAN.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  GITHUB_SECRETS_SETUP.md  INTEGRATION_TEST_IMPROVEMENT_PLAN.md  LICENSE  Makefile  PROVIDER_API_VERIFICATION.md  README.md  VALIDATION_SCRIPTS_CREATED.md  activate.sh  mypy.ini  pyproject.toml  test-failures.md  test_integration.py  test_introspection_demo.py  test_mypy.py  test_patch_size_errors.py  test_patch_validation.py  test_subagent_dispatch.py
.claude/agents/: code-implementer.md
.github/: dependabot.yml
.github/workflows/: ci.yml  e2e-tests.yml  pr-checks.yml  release.yml
Documentation/: API-Contracts-Analysis.md  Architecture.md  CI-Local-Configuration-Analysis.md  CI-PreCommit-Parity.md  E2E_TEST_ANALYSIS_AND_REMEDIATION.md  E2E_TEST_REMEDIATION_SUMMARY.md  Engineering-Review.md  INTEGRATION_TEST_EXECUTION_GUIDE.md  Implementation-History.md  Implementation_Plan.md  Integration-Testing-Guide.md  PRD.md  Phase2-Migration-Final-Report.md  QuickStart.md  README.md  Test-Hanging-Analysis.md  Test-Infrastructure-Remediation.md  TestPhilosophy.md  Testing-Setup.md  UX_Plan.md  V2_Features.md  provider-cli-integration-summary.md
Documentation/Plans/: AGENT1-AnthropicTestFixes.md  AGENT2-OpenAITestFixes.md  AGENT3-OllamaTestFixes.md  DOCUMENTATION-AUDIT-COMPLETE.md  EMERGENCY-IntegrationTestRemediation.md  FEAT-ModelProviders-Phase1.md  FINAL-CI-GREEN-Plan.md  INTEGRATION-TEST-VERIFICATION.md  IntegrationTestRemediationSummary.md  MASTER-IntegrationTestRemediation.md  OVERVIEW-START-HERE.md  PLAN-VERIFICATION-SUMMARY.md  Provider-Implementation-Plan.md  REMEDIATE-DatasetAutoFetch-CI.md  TEST-THEATRE-REMOVAL.md  Task1-FixOpenAITests-Remediation.md  Task1-FixOpenAITests.md  Task2-FixAnthropicTests-Remediation.md  Task2-FixAnthropicTests.md  Task3-CreateValidationScript.md  Task3-FixOllamaTests-Remediation.md
Documentation/Summaries/: ANTHROPIC_TESTS_FIXED.md  API_KEY_MANAGEMENT_SUMMARY.md  CLI_PROVIDER_ENHANCEMENTS_SUMMARY.md  ENHANCED_GENERATION_INTEGRATION_SUMMARY.md  GENERATION_FIXES_SUMMARY.md  INTEGRATION_TEST_COVERAGE_AUDIT.md  INTEGRATION_TEST_DETAILED_REVIEW.md  INTEGRATION_TEST_ENHANCEMENT_SUMMARY.md  INTEGRATION_TEST_FIX_SUMMARY.md  INTEGRATION_TEST_REMEDIATION_FINAL_SUMMARY.md  INTEGRATION_TEST_REMEDIATION_SUMMARY.md  INTEGRATION_TEST_VERIFICATION_REPORT.md  OLLAMA_TESTS_FIXED.md  OLLAMA_TEST_RESULTS.md  OPENAI_PROVIDER_ENHANCEMENT_SUMMARY.md  OPENAI_TESTS_FIXED.md  TEST_THEATRE_ANALYSIS.md  TEST_THEATRE_REMOVAL_COMPLETE.md  TEST_THEATRE_REMOVAL_TASK.md  TRUE_INTEGRATION_TESTS_SUMMARY.md
docs/: arm64-support.md  getting-started.md
docs/providers/: anthropic-setup.md  ollama-setup.md  openai-setup.md
evaluation_results/: results_custom_20250808_104339.json  results_custom_20250812_111003.json  results_custom_20250814_020710.json  results_custom_20250814_021203.json  results_custom_20250814_135058.json  results_lite_20250812_091027.json  results_lite_20250812_121324.json  results_lite_20250812_130523.json  results_lite_20250812_192627.json  results_lite_20250812_200908.json  results_lite_20250813_095043.json  results_lite_20250813_104739.json  results_lite_20250813_162421.json  results_lite_20250814_004340.json  results_lite_20250814_021326.json  results_lite_20250814_023251.json  results_lite_20250814_083042.json  results_lite_20250814_102554.json  stats_custom_20250807_214526.json  stats_custom_20250807_220649.json  stats_custom_20250808_092633.json  stats_custom_20250808_101021.json  stats_custom_20250808_104339.json  stats_custom_20250808_110543.json  stats_custom_20250808_111638.json  stats_custom_20250808_113211.json  stats_custom_20250808_141741.json  stats_custom_20250808_143904.json  stats_custom_20250808_145420.json  stats_custom_20250812_062829.json  stats_custom_20250812_064258.json  stats_custom_20250812_065216.json  stats_custom_20250812_071257.json  stats_custom_20250812_111003.json  stats_custom_20250812_112010.json  stats_custom_20250812_113258.json  stats_custom_20250814_020710.json  stats_custom_20250814_021203.json  stats_custom_20250814_021254.json  stats_custom_20250814_021915.json  (+32 more)
examples/: anthropic_usage.py  batch_processor_demo.py  patch_generation_demo.py  prompt_builder_demo.py  rate_limiting_example.py
patches/: test-instance-123.patch
scripts/: check-generated-files.sh  check.sh  generate_e2e_assertions.py  pre-pr.sh  run_e2e_test.sh  run_integration_tests.py  setup_ollama.sh  smoke_test_dataset.py  test-docker.sh  test-no-docker.sh  test-quick.sh  test-single.sh  test_integration_standalone.py  validate_all_integration_tests.py  validate_anthropic_fixes.py  validate_integration_tests_comprehensive.py  validate_integration_tests_simple.py  validate_ollama_fixes.py  validate_openai_fixes.py  verify_integration_tests.py  verify_test_completeness.py
src/swebench_runner/: __init__.py  __main__.py  bootstrap.py  cache.py  cli.py  cli_provider.py  datasets.py  docker_client.py  docker_run.py  doctor.py  error_utils.py  evaluation_tracker.py  exceptions.py  exit_codes.py  fs_abstraction.py  generation_integration.py  hf_abstraction.py  instance_abstraction.py  model_catalog.py  models.py  output.py  (+5 more)
tests/: __init__.py  conftest.py  test_auth_strategies.py  test_bootstrap.py  test_cache.py  test_cli.py  test_cli_critical.py  test_cli_datasets.py  test_cli_extended.py  test_cli_generation_simple.py  test_datasets.py  test_datasets_coverage.py  test_datasets_security_and_errors.py  test_docker_run.py  test_docker_run_extended.py  test_evaluation_tracker.py  test_exit_codes.py  test_generation_integration.py  test_models_extended.py  test_openai_errors.py  test_output.py  test_output_summary.py  test_patch_validator.py  test_rate_limiters.py  test_response_parser.py  test_response_parser_integration.py  test_streaming_adapters.py  test_token_counters.py  test_token_manager.py  test_transform_pipeline.py  test_unified_models.py
(+165 files in other folders)
